--- a/src/templates/verify-email.html
+++ b/src/templates/verify-email.html
@@ -216,7 +216,7 @@
                                   <td style="line-height: 24px; font-size: 16px; margin: 0" align="left">
                                     <img
                                       class="w-24"
-                                      src="https://duthanhduoc.com/images/logo_big.png"
+                                      src="https://tamnguyen.com/images/logo_big.png"
                                       style="
                                         height: auto;
                                         line-height: 100%;
@@ -453,7 +453,7 @@
                             <div class="text-muted text-center" style="color: #718096" align="center">
                               From Dư Thanh Được with ❤️<br />
                               Chúc bạn học tốt<br />
-                              <a href="https://duthanhduoc.com">duthanhduoc.com</a>
+                              <a href="https://tamnguyen.com">tamnguyen.com</a>
                             </div>
                             <table
                               class="s-6 w-full"
